--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "razorpay": "^2.9.6",
     "serverless-http": "^4.0.0",
     "uuid": "^13.0.0"
   },
